regression/QF_BV/bar.smt2.expected.out
At line 4: syntax error, unexpected TK_SYM, expecting TK_NUM or ')'
